# Quiz-App-v2

quiz_master_22f3002782/: endpoints.txt  pyproject.toml  requirements.txt
quiz_master_22f3002782/Frontend/: index.html  package-lock.json  package.json
quiz_master_22f3002782/Frontend/src/: App.vue  main.js  routes.js
quiz_master_22f3002782/Frontend/src/components/: AdminAnalyticsPage.vue  AdminChaptersPage.vue  AdminPage.vue  AdminQuestionsPage.vue  AdminQuizzesPage.vue  AdminSubjectsPage.vue  AdminUsersPage.vue  AnalyticsPage.vue  ChaptersPage.vue  DashboardPage.vue  FootPage.vue  HomePage.vue  LoadingPage.vue  LoginPage.vue  NavPage.vue  NotFoundPage.vue  ProfilePage.vue  QuizResultsPage.vue  QuizzesPage.vue  RegisterPage.vue  ScoresPage.vue  SubjectsPage.vue  TakeQuizPage.vue  UserPage.vue
quiz_master_22f3002782/backend/: app.py  celery_config.py  requirements.txt
quiz_master_22f3002782/backend/application/: celery_init.py  config.py  mail.py  models.py  routes.py  security.py  tasks.py  utils.py
quiz_master_22f3002782/backend/static/: mail_details.html
