[project]
name = "mad2-project-quizapp-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "flask-jwt-extended>=4.7.1",
    "flask-mail>=0.10.0",
    "flask-security-too>=5.6.2",
    "flask-sqlalchemy>=3.1.1",
    "pandas>=2.3.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
]
